--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-08-19  Brian Nickel <brian.nickel@gmail.com>
+
+	* src/TagLib/File.cs: Fix some typos in documentation.
+	
+	* src/TagLib/NonContainer/Tag.cs:
+	* src/TagLib/NonContainer/File.cs:
+	* src/TagLib/NonContainer/EndTag.cs:
+	* src/TagLib/NonContainer/StartTag.cs: Document completely.
+
 2007-08-17  Brian Nickel <brian.nickel@gmail.com>
 
 	* src/TagLib/Mpeg/AudioHeader.cs: Go back to setting XingHeader early,
